# pinning_service

./: .env.default  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile  build.yml  docker-compose.yml  localnet-init.sh  localnet.yml  start.sh
indexer/: README.md  config.py  graph.py  main.py
indexer/tests/: conftest.py  test_register_resolver_event.py
localnet/: .gitignore  Makefile  content.json  docker-compose.yml
pinning_service/: __init__.py  config.py  content_hash.py  database.py  graph.py  health.py  iri.py  main.py  procrastinate.py  regen.py  routing.py  task_queue.py
pinning_service/tests/: conftest.py  test_content_hash.py  test_health.py  test_iri.py  test_main.py  test_resource.py
