[tool.poetry]
name = "Pinning service"
version = "0.1.0"
description = "Pinning service and resolver for Regen Ledger data."
authors = ["Paul Weidner <paul.weidner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
rdflib = "^6.1.1"
uvicorn = "^0.17.6"
databases = "^0.5.5"
SQLAlchemy = "^1.4.34"
pydantic = "^1.9.0"
aiosqlite = "^0.17.0"
PyLD = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
